--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,14 @@ a {
 /* Колонки */
 
 .row {
+    display: flex;
+
 
 }
 .col {
+    flex: auto;
+    margin-bottom: 24px;
+
 
 }
 
@@ -40,6 +45,11 @@ a {
 }
 
 .button {
+padding: 12px 24px;
+border-radius: 4px;
+border: none;
+background-color: #554AF0;
+color: #fff;
 
 }
 
@@ -48,53 +58,102 @@ a {
 /* Login*/
 
 .input-login {
-
-
+width: 100%;
+padding: 8px;
+margin-bottom: 16px;
+border-style: solid;
+border-radius: 4px;
 }
 
 
 /* Страничка жанров и тегов */
 
-.genre-first {
-
+.genre-first, .genre-second, .genre-third, .genre-fourth  {
+font-family: Arial;
+position: static;
+width: 285.09px;
+height: 37.54px;
+left: 17.17px;
+top: 204.06px;
+background: #E1F5EA;
+border-radius: 4px;
+padding-left: 10px;
+padding-top: 10px;
 }
 
 .genre-second {
-
+margin-top: 16px;
+margin-bottom: 16px;
+width: 205.55px;
+background: #CBEDFF;
 }
 
 .genre-third {
-
+margin-top: 16px;
+margin-bottom: 16px;
+width: 124.42px;
+background: #EEE5BD;
 }
 
 .genre-fourth {
-
+margin-top: 16px;
+margin-bottom: 16px;
+width: 91.47px;
+background: #EBDCF9;
 }
 
 .tag {
+display:flex;
+float: left;
+width:49%;
+margin_top 16px;
+margin-bottom: 16px;
+font-family: Arial;
+color: #554AF0;
+
 
 }
 
 /* Страничка популярного */
 
 .cover {
-
+    width: 85%;
 }
 
 /* Страничка подписки  */
+.box-green, .box-purple {
+    background-color: #E1F5EA;
+
+     margin: 16px 0px;
+     padding: 24px 16px;
+
+     border: none;
+     border-radius: 4px;
+}
 
 .box-green {
+     background-color: #E1F5EA;
+
 
 }
 
 .box-purple {
-
+    background-color: #CBEDFF;
 }
 
 .text-large {
 
+font-size: 20px;
+font-weight: hold;
+margin_bottom: 8px;
+
 }
 
 .button-link {
-
+    padding: 12px 24px;
+    border-radius: 4px;
+    border: none;
+    background-color: #554AF0;
+    color: #fff;
+    text-decoration: none;
 }
